apps/mealie/mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: mealie
  namespace: mealie
spec:
  ports:
    - name: "9925"
      port: 9925
      targetPort: 9000
  selector:
    app: mealie
  type: ClusterIP
